--- a/_css/base/_utilities.scss
+++ b/_css/base/_utilities.scss
@@ -2,6 +2,10 @@
   font-weight: $global-weight-bold;
 }
 
+.u-text-medium {
+  font-weight: $global-weight-medium;
+}
+
 .u-text-normal {
   font-weight: $global-weight-normal;
 }
