--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -352,7 +352,7 @@ body {
 }
 
 .contact-form__wrapper {
-  background: $blue--btn;
+  background: $almost--black;
   color: $white;
   padding-bottom: 4rem;
 
