--- a/_css/foundation/_settings.scss
+++ b/_css/foundation/_settings.scss
@@ -82,6 +82,7 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $gray--bg: #dee3e8;
 $black: #0a0a0a;
+$almost--black: #020202;
 $white: #fefefe;
 $blue--bg: #485aa3;
 $blue--btn: #4389C8;
