Fix htmlproofer errors

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,8 +56,7 @@
   'tb_tfa_script');
 </script>
 <noscript>
-  <img src='https://trc.taboola.com/1323533/log/3/unip?en=page_view'
-      width='0' height='0' style='display:none'/>
+  <img src="https://trc.taboola.com/1323533/log/3/unip?en=page_view" width="0" height="0" style="display:none" alt="Taboola tracking" />
 </noscript>
 <!-- End of Taboola Pixel Code -->
 
