--- a/_includes/sign-up-block.html
+++ b/_includes/sign-up-block.html
@@ -7,7 +7,7 @@
 </style>
 <div id="mc_embed_signup">
 <form action="https://esteemed.us10.list-manage.com/subscribe/post?u=ec5b82da5b213df9999d28215&amp;id=46a52773a0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-  <div class="grid-container">  
+  <div class="grid-container">
     <div class="grid-x grid-padding-x" id="mc_embed_signup_scroll">
       <div class="align-self-middle cell small-12 large-6 sign-up-text">
         <h2>Keep up with <i>The Star</i></h2>
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="align-self-bottom cell small-12 large-6 sign-up-image">
-        <img src="/img/sign-up-image.png" alt="" class="logo" />
+        <img src="/img/sign-up-image.png" alt="Sign up image" class="logo" />
       </div>
     </div>
   </div>
