--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,10 +1,24 @@
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '{{ site.google_analytics }}', 'auto');
-    ga('send', 'pageview');
+  ga('create', '{{ site.google_analytics }}', 'auto');
+  ga('send', 'pageview');
 
-  </script>
+  <!-- Taboola Pixel Code -->
+  window._tfa = window._tfa || [];
+  window._tfa.push({notify: 'event', name: 'page_view', id: 1323533});
+  !function (t, f, a, x) {
+    if (!document.getElementById(x)) {
+      t.async = 1;t.src = a;t.id=x;f.parentNode.insertBefore(t, f);
+    }
+  }(document.createElement('script'),
+    document.getElementsByTagName('script')[0],
+    '//cdn.taboola.com/libtrc/unip/1323533/tfa.js',
+    'tb_tfa_script');
+</script>
+<noscript>
+  <img src="https://trc.taboola.com/1323533/log/3/unip?en=page_view" width="0" height="0" style="display:none" alt="Taboola tracking" />
+</noscript>
