--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,6 @@
+{% assign dir = page.dir | split: '/'  %}
+{% assign subdir = dir[2] %}
+{% assign dir = dir[1] %}
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -36,7 +39,9 @@
   {% if site.google_analytics and jekyll.environment == 'production' %}
   {%- include analytics.html -%}
   {% endif %}
+  {% if dir != 'learn-more' %}
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ec5b82da5b213df9999d28215/0673e7ae85abc061ee3a624af.js");</script>
+  {% endif %}
   <meta name="google-site-verification" content="wNUxPdQdb3UIRqXI903MG3Izn-CZSnd-Nl6s0mALXrA"/>
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7487839.js"></script>
