Remove unnecessary type attribute for script tags

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
     <div class="grid-container">
       <h3>Scale your workforce instantly to meet the needs of your business</h3>
       <!--[if lte IE 8]>
-      <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+      <script charset="utf-8"src="//js.hsforms.net/forms/v2-legacy.js"></script>
       <![endif]-->
-      <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+      <script charset="utf-8" src="//js.hsforms.net/forms/v2.js"></script>
       <script>
       hbspt.forms.create({
       portalId: "7487839",
@@ -73,4 +73,4 @@
 // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/zrqksojs'
 (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/zrqksojs';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
 </script>
-<script type="text/javascript" src="/js/esteemed.js"></script>
+<script src="/js/esteemed.js"></script>
