--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,6 @@
   {% endif -%}
   <meta name="google-site-verification" content="wNUxPdQdb3UIRqXI903MG3Izn-CZSnd-Nl6s0mALXrA"/>
   <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7487839.js"></script>
+  <script id="hs-script-loader" async defer src="//js.hs-scripts.com/7487839.js"></script>
   <!-- End of HubSpot Embed Code -->
 </head>
