Remove deprecated charset attribute

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
     <div class="grid-container">
       <h3>Scale your workforce instantly to meet the needs of your business</h3>
       <!--[if lte IE 8]>
-      <script charset="utf-8"src="//js.hsforms.net/forms/v2-legacy.js"></script>
+      <script src="//js.hsforms.net/forms/v2-legacy.js"></script>
       <![endif]-->
-      <script charset="utf-8" src="//js.hsforms.net/forms/v2.js"></script>
+      <script src="//js.hsforms.net/forms/v2.js"></script>
       <script>
       hbspt.forms.create({
       portalId: "7487839",
