--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <meta property="og:description" content="{{ description }}" />
   {%- endif -%}
   <link rel="canonical" href="https://esteemed.io/" />
+  <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/css/esteemed.css">
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
