Reduce text size of h2 on company page

--- a/_css/base/_typography.scss
+++ b/_css/base/_typography.scss
@@ -29,6 +29,14 @@ h2,
   }
 }
 
+h3,
+.h3 {
+
+  @include breakpoint(medium) {
+    font-size: 2rem;
+  }
+}
+
 .h5 {
   margin-bottom: $spacing;
 }
