[ES-75] Update metadata

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
     {%- else -%}
       {% assign description = page.autopages.display_name | prepend: 'An archive of posts tagged ' %}
     {%- endif -%}
+    {%- if tag.image -%}
+      {% assign image = tag.image %}
+    {%- endif -%}
   {%- endif -%}
   <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/css/esteemed.css">
