--- a/_layouts/author_index.html
+++ b/_layouts/author_index.html
@@ -6,7 +6,7 @@ layout: default
 {% assign posts = site.posts | where:'author', page.author %}
 <div class="grid-container author-post-item">
   <div class="grid-x align-top">
-    <h1 class="u-text-bold main-title text-center"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}" alt="{{ author.name }}" />{{ author.name }}'s Posts</h1>
+    <h1 class="u-text-bold main-title text-center"><img src="{% if author.profile_image %}{{ author.profile_image }}{% else %}/img/profile-pic.png{% endif %}" alt="{{ author.name }}" />{{ author.name }}'s Posts</h1>
     <div class="heading-subtitle">{{ author.bio | markdownify }}</div>
   </div>
   <div class="grid-x align-top grid-padding-x blog-all-posts">
