Move HubSpot code

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,3 +67,4 @@
 <noscript>
   <img src="https://trc.taboola.com/1323533/log/3/unip?en=page_view" width="0" height="0" style="display:none" alt="Taboola tracking" />
 </noscript>
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7487839.js"></script>
