Revert "Move HubSpot code"
This reverts commit 96cd6bfce02285f93cea3d5a604de6cfa8d5284f.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,4 +44,7 @@
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ec5b82da5b213df9999d28215/0673e7ae85abc061ee3a624af.js");</script>
   {% endif -%}
   <meta name="google-site-verification" content="wNUxPdQdb3UIRqXI903MG3Izn-CZSnd-Nl6s0mALXrA"/>
+  <!-- Start of HubSpot Embed Code -->
+  <script id="hs-script-loader" async defer src="//js.hs-scripts.com/7487839.js"></script>
+  <!-- End of HubSpot Embed Code -->
 </head>
