--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@ layout: default
         <div class="blog-post__author-block--container grid-x">
           <div class="cell medium-4 large-3">
             <div class="blog-post__author-block--image">
-              <a href="/blog/author/{{ page.author }}/"><img src="{% if author.image %}{{ author.image }}{% else %}/img/profile-pic.png{% endif %}" alt="{{ author.name }}"></a>
+              <a href="/blog/author/{{ page.author }}/"><img src="{% if author.profile_image %}{{ author.profile_image }}{% else %}/img/profile-pic.png{% endif %}" alt="{{ author.name }}"></a>
             </div>
           </div>
           <div class="cell medium-8 large-9">
