Hide footer form on partner registration page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+{% if page.url != '/partners/partner-registration/' %}
 <div id="contact-form">
   <div class="contact-form__wrapper padding-top-3 text-center">
     <div class="grid-container">
@@ -15,6 +16,7 @@
     </div>
   </div>
 </div>
+{% endif %}
 <footer class="footer u-bg-gray">
   <div class="footertop">
     <div class="grid-container w-clearfix">
