[EST-93] Add Georgia font

--- a/_css/base/_variables.scss
+++ b/_css/base/_variables.scss
@@ -9,3 +9,4 @@ $lg-section-spacing: rem-calc(90);
 $font-lato: 'Lato', sans-serif;
 $font-poppins: 'Poppins', sans-serif;
 $font-satisfy: 'Satisfy', cursive;
+$font-georgia: 'Georgia';
