--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-{% if page.url != '/partners/partner-registration/' and page.url != '/get-a-quote/' %}
+{% if page.url != '/partners/partner-registration/' and page.url != '/get-a-quote/' and page.url != '/contact/'%}
 <div id="contact-form">
   <div class="contact-form__wrapper padding-top-3 text-center">
     <div class="grid-container">
