[EST-90] Apply site-wide styling to jobs page

--- a/_css/layout/_navigation.scss
+++ b/_css/layout/_navigation.scss
@@ -1,5 +1,8 @@
 .title-bar {
   justify-content: flex-end;
+  @include breakpoint(small only and large up) {
+    display: block !important;
+  }
 }
 
 .w-nav {
