--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,13 +49,20 @@
             </ul>
           </div>
         </div>
+        <div class="footerbottom__second cell small-6 large-3">
+          <div class="footerbottom__first--content">
+            <h6>Platforms</h6>
+            <ul>
+              <li><a href="https://app.drupalcontractors.com/" target="_blank">Drupal Contractors</a></li>
+              <li><a href="https://app.wpcontractors.com/" target="_blank">WP Contractors</a></li>
+            </ul>
+          </div>
+        </div>
         <div class="footerbottom__third cell small-6 large-3">
           <h6>Support</h6>
           <ul>
             <li><a class="mail" href="mailto:support@esteemed.io">support@esteemed.io</a></li>
           </ul>
-        </div>
-        <div class="footerbottom__third cell small-6 large-3">
         </div>
         <div class="footerbottom__forth cell small-6 large-3">
         </div>
