Add Code of Conduct link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,7 +67,7 @@
         <div class="footerbottom__forth cell small-6 large-3">
         </div>
       </div>
-      <div class="footer__copyright">Copyright&copy; {{ "now" | date: "%Y" }} Esteemed. <a href="/privacy-policy/">Privacy</a> | <a href="/terms-use/">Terms</a></div>
+      <div class="footer__copyright">Copyright&copy; {{ "now" | date: "%Y" }} Esteemed. <a href="/privacy-policy/">Privacy</a> | <a href="/terms-use/">Terms</a> | <a href="/code-of-conduct/">Code of Conduct</a></div>
     </div>
   </div>
 </footer>
