Copy: Change "Platforms" to "Products"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,7 +51,7 @@
         </div>
         <div class="footerbottom__second cell small-6 large-3">
           <div class="footerbottom__first--content">
-            <h6>Platforms</h6>
+            <h6>Products</h6>
             <ul>
               <li><a href="https://app.drupalcontractors.com/" target="_blank">Drupal Contractors</a></li>
               <li><a href="https://app.wpcontractors.com/" target="_blank">WP Contractors</a></li>
