--- a/_css/esteemed.scss
+++ b/_css/esteemed.scss
@@ -2,6 +2,7 @@
 @import 'base/variables';
 @import 'base/typography';
 @import 'base/icons';
+@import 'base/lists';
 @import 'base/utilities';
 @import 'layout/navigation';
 @import 'layout/footer';
