[EST-102] Add variables for mailchimp forms

--- a/_css/base/_variables.scss
+++ b/_css/base/_variables.scss
@@ -1,4 +1,7 @@
 $yellow: #E5C248;
+$mailchimp-background-input: #f5f8fa;
+$mailchimp-blue: #475aa3;
+
 $half-spacing: 0.5em;
 $spacing: 1em;
 $double-spacing: 2em;
