[EST-102] add styles for new form

--- a/_css/esteemed.scss
+++ b/_css/esteemed.scss
@@ -10,3 +10,4 @@
 @import 'components/card';
 @import 'components/testimonial';
 @import 'components/sign-up-block';
+@import 'components/mailchimp';
