--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -311,6 +311,56 @@ body {
   }
 }
 
+.hero-blog-container {
+  max-width: 100%;
+  display: flex;
+  flex-flow: wrap;
+  margin-bottom: 4rem;
+
+  .heroBanner-left {
+    flex: 0 0 50%;
+    text-align: left !important;
+    @include breakpoint(small only) {
+      flex: 0 0 100%;
+    }
+
+    .main-title {
+      font-family: $font-georgia;
+      padding-left: 25%;
+      padding-top: 5rem;
+      @include breakpoint(small only) {
+        padding-left: 2rem;
+        padding-top: 2rem;
+      }
+    }
+
+    .heading-subtitle {
+      font-family: $font-poppins;
+      padding-left: 25%;
+      text-align: left;
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      @include breakpoint(small only) {
+        padding-left: 2rem;
+      }
+    }
+  }
+
+  .heroBanner-right {
+    flex: 0 0 50%;
+    @include breakpoint(small only) {
+      flex: 0 0 100%;
+    }
+
+    .heroBanner-image {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 .author-post-item,
 .category-post-item {
   margin-bottom: 5rem;
