--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -329,7 +329,8 @@ body {
       padding-left: 25%;
       padding-top: 5rem;
       @include breakpoint(small only) {
-        padding-left: 2rem;
+        padding-left: 0;
+        text-align: center;
         padding-top: 2rem;
       }
     }
@@ -338,11 +339,17 @@ body {
       font-family: $font-poppins;
       padding-left: 25%;
       text-align: left;
-      width: 100%;
+      width: 65%;
       margin-left: 0;
       margin-right: 0;
+      @include breakpoint(medium only) {
+        width: 85%;
+      }
       @include breakpoint(small only) {
-        padding-left: 2rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        text-align: center;
+        width: 100%;
       }
     }
   }
