[est-92] Update partner page content and style

--- a/_css/foundation/_settings.scss
+++ b/_css/foundation/_settings.scss
@@ -123,6 +123,7 @@ $button-blue: #4389c8;
 $button-hover-blue: #4d64af;
 $dark-grey: #acb9c4;
 $light-grey: #dde4e8;
+$slider-background-green: #009480;
 
 @include add-foundation-colors;
 
