--- a/_css/components/_mailchimp.scss
+++ b/_css/components/_mailchimp.scss
@@ -31,7 +31,7 @@
     min-height: 27px;
   }
 
-  input {
+  input:not([type=radio])  {
     box-shadow: inset 0 1px 2px rgba(82, 168, 236, 0.8) !important;
   }
 
