[EST-113] Add phone number to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,6 +36,7 @@
               <li><a href="/company/">Company</a></li>
               <li><a href="/contact/">Contact</a></li>
               <li><a class="mail" href="mailto:press@esteemed.io">press@esteemed.io</a></li>
+              <li><a class="tel" href="tel:13607123866">1 (360) 712-3866</a></li>
             </ul>
           </div>
           {% include social-links.html class="show-for-medium" %}
